install laravel sail for docker and update env to prod

--- a/.env.prod
+++ b/.env.prod
@@ -9,10 +9,10 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=mysql
+DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=bank-isal
-DB_USERNAME=sail
+DB_USERNAME=salbi
 DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
