--- a/.env.prod
+++ b/.env.prod
@@ -12,7 +12,7 @@ DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=bank-isal
-DB_USERNAME=salbi
+DB_USERNAME=sail
 DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
