--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,17 +1,22 @@
-name: My Workflow
-on: [push]
+name: Docker Image Swarm CI
+
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
+
   build:
+
     runs-on: ubuntu-latest
-    container: 
-      image: lorisleiva/laravel-docker:7.4
+
     steps:
-    - uses: actions/checkout@v2
-    - name: Copy .env
-      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-    - name: Install Dependencies
-      run: composer install --prefer-dist --no-progress --no-suggest
-    - name: Generate key
-      run: php artisan key:generate
-      # Your Laravel application is ready...
+    - uses: actions/checkout@v3
+    - name : Docker Login
+      run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
+    - name: Build the Docker image
+      run: docker build . --file Dockerfile --tag ${{secrets.DOCKER_USERNAME}}/laravel_test:latest
+    - name: Docker Push
+      run: docker push ${{secrets.DOCKER_USERNAME}}/laravel_test
